[package]
name = "shishua"
version = "0.2.0"
authors = ["Dario Bartussek <d.bartussek@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Port of the shishua rng algorithm to Rust"
repository = "https://github.com/dbartussek/shishua_rs"

[features]
nightly = ["bytemuck/nightly_portable_simd"]
rand = ["rand_core"]

default = ["rand"]

[dependencies]
bytemuck = "1.24.0"
byteorder = "1.5.0"
rand_core = { version = "0.9.3", optional = true, default-features = false }
