[package]
name = "shishua"
version = "0.2.0"
authors = ["Dario Bartussek <d.bartussek@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Port of the shishua rng algorithm to Rust"
repository = "https://github.com/dbartussek/shishua_rs"

[[bench]]
name = "bench"
harness = false


[features]
nightly = ["bytemuck/nightly_portable_simd"]
rand = ["rand_core"]
wide = ["dep:wide"]

default = ["rand"]

# Compile bindings to the C implementation for benchmarks and tests
__intern_c_bindings = ["cc"]

[dependencies]
bytemuck = "1.24.0"
rand_core = { version = "0.9.3", optional = true, default-features = false }
wide = { version = "0.8.1", optional = true }

[build-dependencies]
cc = { version = "1.2.41", optional = true }

[dev-dependencies]
criterion = "0.7.0"
rand = "0.9.2"
